pythonCppRst = files(
  "content/pages/python-cpp/PythonCpp_HTML.rst",
  "content/pages/python-cpp/Introduction.rst",
  "content/pages/python-cpp/Configuration.rst",
  "content/pages/python-cpp/DBoStandalone.rst",
  "content/pages/python-cpp/DBoHierarchy.rst",
  "content/pages/python-cpp/NonDBo.rst",
  "content/pages/python-cpp/DbU.rst",
  "content/pages/python-cpp/Name.rst",
)

pythonTutorialRst = files(
  "content/pages/python-tutorial/PythonTutorial_HTML.rst",
  "content/pages/python-tutorial/Introduction.rst",
  "content/pages/python-tutorial/Environment.rst",
  "content/pages/python-tutorial/CellNetComponent.rst",
  "content/pages/python-tutorial/Collections.rst",
  "content/pages/python-tutorial/CgtScript.rst",
  "content/pages/python-tutorial/Netlist.rst",
  "content/pages/python-tutorial/RealDesigns.rst",
  "content/pages/python-tutorial/ToolEngines.rst",
  "content/pages/python-tutorial/AdvancedTopics.rst",
)

usersGuideRst = files(
  "content/pages/users-guide/UsersGuide_HTML.rst",
  "content/pages/users-guide/LicenseCredits.rst",
  "content/pages/users-guide/Releases.rst",
  "content/pages/users-guide/DesignFlow.rst",
  "content/pages/users-guide/Installation.rst",
  "content/pages/users-guide/Configuration.rst",
  "content/pages/users-guide/ViewerTools.rst",
  "content/pages/users-guide/ScriptsPlugins.rst",
 )

 designFlowRst = files(
  "content/pages/design-flow/DesignFlow_HTML.rst",
  "content/pages/design-flow/DesignFlow.rst",
  "content/pages/design-flow/QuickStart.rst",
 )

rdsRst = files(
  "content/pages/rds/RDS_HTML.rst",
  "content/pages/rds/RDSpage.rst",
)

stratusRst = files(
  "content/pages/stratus/Stratus_HTML.rst",
  "content/pages/stratus/Developper.rst",
  "content/pages/stratus/Language.rst",
  "content/pages/stratus/DpGen.rst",
  "content/pages/stratus/Patterns.rst",
)

mainRst = files(
  "content/pages/documentation.rst",
  "content/pages/gitlab.rst",
  "content/pages/homepage.rst",
  "content/pages/symbolic-layout.rst",
  )

css = files(
  "themes/nest-coriolis/static/css/nest.css",
  "themes/nest-coriolis/static/css/pygment.css",
  "themes/nest-coriolis/static/css/coriolis.css",
  )


rst2latex = find_program('rst2latex')
pdflatex = find_program('pdflatex')

